Fix header height on mobile in landscape mode

--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -10,15 +10,11 @@
   grid-auto-flow: column;
   row-gap: calc(var(--gap) * 2);
   align-items: end;
-
-  // Ensure page is minimum 1 screen high to put menu at bottom in mobile
-  height: 85vh;
-
-  // When supported, use env vars to avoid UI chrome
-  height: calc(85vh - env(safe-area-inset-bottom));
-
-  // When supported, use dvh instead of env vars
-  height: 85dvh;
+  height: 85vh; // Ensure page is minimum 1 screen high to put menu at bottom in mobile
+  height: calc(85vh - env(safe-area-inset-bottom)); // When supported, use env vars to avoid UI chrome
+  height: 85dvh; // When supported, use dvh instead of env vars
+  min-height: 31rem;
+  padding-top: calc(var(--gap) * 4);
   background-color: var(--color-cover);
 
   * {
@@ -40,7 +36,8 @@
 
   @include media(">tablet") {
     grid-template-rows: auto 1fr;
-    padding-top: calc(var(--gap) * 6);
+
+    @include media("portrait") { padding-top: calc(var(--gap) * 6); }
 
     h1 {
       grid-column: var(--content-start) / span calc(var(--content-width) * 3);
